--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "server.js",
   "type": "module",
   "dependencies": {
     "abbrev": "^1.1.1",
@@ -47,6 +47,7 @@
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
     "express": "^4.21.2",
+    "express-validator": "^7.2.1",
     "finalhandler": "^1.3.1",
     "forwarded": "^0.2.0",
     "fresh": "^0.5.2",
@@ -101,6 +102,7 @@
     "negotiator": "^0.6.3",
     "node-addon-api": "^5.1.0",
     "node-fetch": "^2.7.0",
+    "nodemon": "^3.1.9",
     "nopt": "^5.0.0",
     "npmlog": "^5.0.1",
     "object-assign": "^4.1.1",
